# EthoGraph2

./: .gitignore  .readthedocs.yaml  ALIGN_good.ipynb  CLAUDE.md  LICENSE  README.md  environment-dev.yml  environment.yml  mkdocs.yml  phylib_migration.md  pulse_frequency_segments.tsv  pyproject.toml  requirements.txt  test.ipynb  test_neo.py  test_pyav.py
.ethograph/: local_settings.yaml
.github/: copilot-instructions.md
configs/: arena.yaml  changepoint_settings.yaml  mapping.txt  mappingOrig.txt  mapping_aud_seq.txt  mapping_temporary.txt
configs/labels/: mapping_pair24.txt  mapping_setup_audio.txt
configs/style/: style ppt.mplstyle  (+1 more)
docs/: api.md  changepoints.md  data-loading.md  data-requirements.md  ephys-data.md  ephys.md  export-labels.md  index.md  installation.md  labelling.md  loading-audio.md  loading-ephys.md  loading-numpy.md  loading-other.md  loading-pose.md  loading-script.md  nwb.md  plot-settings.md  shortcuts.md  todo_docs.md  trialtree.md  troubleshooting.md  tutorials.md  wizard.html  wizard.md
ethograph/: __init__.py  cli.py  shortcuts.py
scripts/: MOV_testing.ipynb  debug_gui.py  debug_launch_copy_paste.json  eval.ipynb  find_best_s3d.ipynb  model_config.py  model_run.py  s3d_features.py
tests/: conftest.py  test_changepoints.py  test_data_loading.py  test_gui_integration.py  test_label_intervals.py  test_no_video_mode.py
tutorials/: convert_dataset_birdpark.ipynb  convert_dataset_ibl-brainwide.ipynb.ipynb  convert_dataset_pair24.ipynb  convert_datset_lockbox.ipynb  create_dataset_Moll25.ipynb  create_dataset_cricket.ipynb
(+116 files in other folders)
