[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethograph"
version = "0.1.0"
description = "GUI for segmenting animal behaviour using transformer models and changepoint detection."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "ethograph Team"}
]
# Dependencies managed via conda environment.yml files
dependencies = []

[project.scripts]
ethograph = "ethograph.cli:main"


[project.gui-scripts]
ethograph-gui = "ethograph.cli:launch"

[project.entry-points."napari.manifest"]
ethograph-gui = "ethograph.gui:napari.yaml"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "ruff",
    "tox",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]


[tool.setuptools.packages.find]
include = ["ethograph", "ethograph.*"]

[tool.setuptools.package-data]
"ethograph.gui" = ["*.yaml"]
ethograph = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
